version/0.17/_sources/api/solver/_autosummary/settings/turbo_interface.rst.txt
:orphan:

.. _turbo_interface:

turbo_interface
===============

.. autoclass:: ansys.fluent.core.solver.settings_232.turbo_interface.turbo_interface
    :show-inheritance:

.. rubric:: Methods

========================================   ==============================

Method                                                            Summary

========================================   ==============================
:ref:`list <list>`                                        'list' command.

:ref:`list_properties <list_properties>`       'list_properties' command.

:ref:`duplicate <duplicate>`                         'duplicate' command.

========================================   ==============================

.. rubric:: Named object type

:ref:`turbo_interface_child <turbo_interface_child>`


.. rubric:: Included in:

========================================   ===================================

Parent                                                                 Summary

========================================   ===================================
:ref:`mesh_interfaces <mesh_interfaces>`       Enter the mesh interfaces menu.

========================================   ===================================

