version/0.19/_sources/api/solver/_autosummary/settings/turbo_interface.rst.txt
:orphan:

.. _turbo_interface:

turbo_interface
===============

.. autoclass:: ansys.fluent.core.solver.settings_241.turbo_interface.turbo_interface
    :show-inheritance:

.. rubric:: Methods

==========================================   =========================================

Method                                                                         Summary

==========================================   =========================================
:ref:`delete <delete_1>`                                      Delete selected objects.

:ref:`list <list>`                                      List the names of the objects.

:ref:`list_properties <list_properties_1>`       List active properties of the object.

:ref:`make_a_copy <make_a_copy>`                          Create a copy of the object.

==========================================   =========================================

.. rubric:: Named object type

:ref:`turbo_interface_child <turbo_interface_child>`


.. rubric:: Included in:

========================================   ===================================

Parent                                                                 Summary

========================================   ===================================
:ref:`mesh_interfaces <mesh_interfaces>`       Enter the mesh interfaces menu.

========================================   ===================================

